# pattcut-odr-library

./: .gitignore  README.md
classifiers/: Audi_Logo.xml
src/: CMakeLists.txt
src/RecognitionLib/: CMakeLists.txt
src/RecognitionLib/inc/TinyXML/: tinyxml.h
src/RecognitionLib/inc/accuracy_estimation/: AccuracyResults.h  LogisticAccuracyEstimator.h  SimpleAccuracyEstimator.h
src/RecognitionLib/inc/classifier_loaders/: ClassifierLoader.h  ClassifierLoaderOpenCV.h  ClassifierLoaderPattCut.h
src/RecognitionLib/inc/classifiers/: ClassificationResult.h  ClassificationTag.h
src/RecognitionLib/inc/classifiers/boosted/: BoostedClassifier.h  BoostedClassifierCompact.h
src/RecognitionLib/inc/classifiers/cascade/: CascadeClassifier.h  CascadeClassifierCompact.h  CascadeStatistic.h
src/RecognitionLib/inc/classifiers/multi_class_viola_jones/: CapturedAreaInfo.h  MultiClassViolaJonesController.h  MultiClassViolaJonesRecognitionDataInfo.h  MultiClassViolaJonesRecognitionResult.h  ResultByClassifier.h
src/RecognitionLib/inc/classifiers/simple/: FixedAreaStatMomentsClassifier.h  StatMomentsClassifier.h  StumpClassifier.h  StumpClassifierCompact.h
src/RecognitionLib/inc/classifiers/viola_jones/: AreaWithExtInfo.h  ScaledCascadeInfo.h  ScaledCascadeInfoCompact.h  ViolaJonesClassifier.h  ViolaJonesOutputWithStatistic.h
src/RecognitionLib/inc/export/: test_export.h
src/RecognitionLib/inc/export/pattcut/: PattCutC.h  PattCutCPP.h  export_helper.h
src/RecognitionLib/inc/export/pattcut/c_api/: Common.h  Image.h  RecognitionFunctions.h  RecognitionResults.h
src/RecognitionLib/inc/export/pattcut/cpp_api/: Image.h  RecognitionController.h  RecognitionResults.h
src/RecognitionLib/inc/haar_features/: EvaluateRactangle.h  EvaluateRactangleCompact.h  HaarFeature.h  HaarFeatureCompact.h
src/RecognitionLib/inc/images/: Image.h  ImageLoader.h  IntegralImage.h  MatrixStorage.h  WindowData.h  WindowIntegralImage.h
src/RecognitionLib/inc/post_filtration/: FilteredAreaInfo.h  FilteredAreaWithExtInfo.h  ResDataCombination.h  StandardResultFiltration.h  ViolaJonesFilteredOutputWithStatistic.h
src/RecognitionLib/inc/support/: Exceptions.h  OwnTrackingPtr.h  PlatformHelperMacro.h  Rectangle.h  RectangleF.h
src/RecognitionLib/inc/tests/: test_integral_image.h
src/RecognitionLib/src/TinyXML/: tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp
src/RecognitionLib/src/accuracy_estimation/: LogisticAccuracyEstimator.cpp  SimpleAccuracyEstimator.cpp
src/RecognitionLib/src/classifier_loaders/: ClassifierLoader.cpp  ClassifierLoaderOpenCV.cpp  ClassifierLoaderPattCut.cpp
src/RecognitionLib/src/classifiers/boosted/: BoostedClassifier.cpp  BoostedClassifierCompact.cpp
src/RecognitionLib/src/classifiers/cascade/: CascadeClassifier.cpp  CascadeClassifierCompact.cpp
src/RecognitionLib/src/classifiers/multi_class_viola_jones/: MultiClassViolaJonesController.cpp
src/RecognitionLib/src/classifiers/simple/: StatMomentsClassifier.cpp  StumpClassifier.cpp  StumpClassifierCompact.cpp
src/RecognitionLib/src/classifiers/viola_jones/: ViolaJonesClassifier.cpp
src/RecognitionLib/src/export/: RecognitionLib.def  test_export.cpp
src/RecognitionLib/src/export/pattcut/c_api/: Common.cpp  Image.cpp  RecognitionFunctions.cpp
src/RecognitionLib/src/export/pattcut/cpp_api/: Image.cpp  RecognitionController.cpp
src/RecognitionLib/src/haar_features/: EvaluateRactangle.cpp  EvaluateRactangleCompact.cpp  HaarFeature.cpp  HaarFeatureCompact.cpp
src/RecognitionLib/src/images/: ImageLoader.cpp  IntegralImage.cpp  WindowIntegralImage.cpp
src/RecognitionLib/src/post_filtration/: ResDataCombination.cpp  StandardResultFiltration.cpp
src/RecognitionLib/src/tests/: test_integral_image.cpp
src/RecognitionLibTest/: CMakeLists.txt
src/RecognitionLibTest/src/: main.cpp
src/cmake/: FindImageMagickCustomWin.cmake  FindLibJpegTurbo.cmake
src/libs/libjpeg-turbo/x64/: jpeg-static.lib  turbojpeg-static.lib
src/libs/libjpeg-turbo/x86/: jpeg-static.lib  turbojpeg-static.lib
src/libs/libpng/x64/: libpng16.lib
src/libs/libpng/x86/: libpng16.lib
src/libs/zlib/x64/: zlib.lib
src/libs/zlib/x86/: zlib.lib
